--- a/custom.css
+++ b/custom.css
@@ -280,6 +280,10 @@ input:focus + .slider {
 div#floorplancontent {
     height: 87%;
 }
+.bannercontent{
+	padding:0;
+	margin:0;
+}
 
 div.bannercontent .row.divider:before,
 div.bannercontent .row.divider:after,
@@ -310,10 +314,18 @@ div.bannercontent .row.divider{
 }
 @media (min-width: 768px){
 div.bannercontent .row.divider{
-    grid-template-columns:repeat(3,1fr);
+    grid-template-columns:repeat(2,1fr);
     grid-auto-rows: 140px;
   }
-}@media (min-width: 1200px){
+}
+
+@media (min-width: 992px){
+div.bannercontent .row.divider{
+    grid-template-columns:repeat(3,1fr);
+    grid-auto-rows: 10vmax;
+  }
+	
+@media (min-width: 1200px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(4,1fr);
     grid-auto-rows: 10vmax;
