--- a/custom.css
+++ b/custom.css
@@ -280,10 +280,26 @@ input:focus + .slider {
 div#floorplancontent {
     height: 87%;
 }
-.bannercontent{
-	padding:0;
-	margin:0;
+
+#holder,
+#holder > .container-fluid,
+#holder .bannercontent{
+	padding:0 !important;
+	margin:0 !important;
 }
+#holder{
+	padding:0 5%  !important;
+	padding-top:45px !important;
+}
+@media (min-width: 992px){
+div.bannercontent .row.divider{
+	padding-top:85px !important;
+  }
+}
+
+
+
+
 
 div.bannercontent .row.divider:before,
 div.bannercontent .row.divider:after,
@@ -306,10 +322,10 @@ div.bannercontent .row.divider{
 }
 /*need to change this for all media screen...*/
 
-@media (max-width: 767px){
+@media (max-width: 341px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(1,1fr);
-    grid-auto-rows: 140px;
+    grid-auto-rows: 110px;
   }
 }
 @media (min-width: 768px){
@@ -324,7 +340,7 @@ div.bannercontent .row.divider{
     grid-template-columns:repeat(3,1fr);
     grid-auto-rows: 140px;
   }
-	
+}	
 @media (min-width: 1200px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(4,1fr);
