--- a/custom.css
+++ b/custom.css
@@ -293,11 +293,10 @@ div#floorplancontent {
 }
 #holder{
 	padding:0 5%  !important;
-	padding-top:85px !important;
 }
-@media (max-width: 992px){
+@media (min-width: 992px){
 div.bannercontent{
-	padding-top:0 !important;
+	padding-top:85px !important;
   }
 }
 
