--- a/custom.css
+++ b/custom.css
@@ -323,7 +323,7 @@ div.bannercontent .row.divider{
 }
 /*need to change this for all media screen...*/
 
-@media (max-width: 480px){
+@media (min-width: 480px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(1,1fr);
     grid-auto-rows: 110px;
@@ -335,7 +335,6 @@ div.bannercontent .row.divider{
     grid-auto-rows: 140px;
   }
 }
-
 @media (min-width: 992px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(3,1fr);
@@ -348,6 +347,8 @@ div.bannercontent .row.divider{
     grid-auto-rows: 10vmax;
   }
 }
+
+
 
 div.item {
   position: relative;
