--- a/custom.css
+++ b/custom.css
@@ -295,7 +295,7 @@ div#floorplancontent {
 	padding:0 5%  !important;
 }
 @media (min-width: 992px){
-div.bannercontent{
+#holder{
 	padding-top:85px !important;
   }
 }
@@ -320,15 +320,16 @@ div.bannercontent .row.divider{
     gap:15px;
     justify-items: stretch;
     align-items: stretch;
+	
+	
+	
+	
+    grid-template-columns:repeat(1,1fr);
+    grid-auto-rows: 110px;
 }
 /*need to change this for all media screen...*/
 
-@media (min-width: 480px){
-div.bannercontent .row.divider{
-    grid-template-columns:repeat(1,1fr);
-    grid-auto-rows: 110px;
-  }
-}
+
 @media (min-width: 768px){
 div.bannercontent .row.divider{
     grid-template-columns:repeat(2,1fr);
